fixed message-container text overflow

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -12,7 +12,7 @@
 }
 
 .message-container{
-  white-space:pre;
+  white-space:pre-line;
 }
 
 .inner-container{
